--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,13 @@ h1{
   text-align: center;
   text-transform: lowercase;
   text-decoration: line-through;
-  
+  transition: all 100000ms ease;
+}
+
+h1:hover{
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: underline;
 }
 
 body{
@@ -65,6 +71,8 @@ body{
   height: 100%;
   display: flex;
   
+  /* generar o simular scroll */
+  min-height: 1000px;
 }
 
 
