✨ (components): add Saludo, Padre, and Hijo components with templates and styles; update AppComponent to use them

--- a/angular/project-angular-bit/src/app/app.component.html
+++ b/angular/project-angular-bit/src/app/app.component.html
@@ -332,6 +332,8 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<h1>Hello World</h1>
+<!-- <h1>Hello World</h1> -->
+<app-saludo></app-saludo>
+<app-padre></app-padre>
 
 <router-outlet />
