✨ (routing): update routing configuration in AppRoutingModule; add routes for home, login, hijo, and saludo components

--- a/angular/project-angular-bit/src/app/app.component.html
+++ b/angular/project-angular-bit/src/app/app.component.html
@@ -333,7 +333,13 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <!-- <h1>Hello World</h1> -->
-<app-saludo></app-saludo>
+<!-- <app-saludo></app-saludo>
 <app-padre></app-padre>
-<app-login></app-login>
+<app-login></app-login> -->
+
+<!-- Usar rutas -->
+<div routerLink="/hijo">Ir a hijo</div>
+<div routerLink="/login">Ir a login</div>
+<div routerLink="/saludo">Ir a saludo</div>
+<div routerLink="/home">Ir a padre</div>
 <router-outlet />
